--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 authors = ["Martin Svensson <martin@appscifi.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/macthestack/jwkrs"
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
