--- a/examples/axum/Cargo.toml
+++ b/examples/axum/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
 name = "axum"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = { version = "0.2.5" }
-tokio = { version = "1", features = ["full"] }
+axum = { version = "0.8.1", features = ["macros"] }
+axum-extra = { version = "0.10.0", features = ["typed-header"] }
+tokio = { version = "1.44.0", features = ["full"] }
 jwkrs = { path = "../../" }
-evmap = "10"
-evmap-derive = "0.2"
-serde = "1"
