--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,11 @@ evmap = "10"
 evmap-derive = "0.2"
 tracing = "0.1"
 cache_control = "0.2"
+
+[dev-dependencies]
+wiremock = "0.6"
+rsa = "0.9"
+rand = "0.8"
+base64 = "0.22"
+chrono = "0.4"
+serde_json = "1.0"
