Refactor JwkAuth to improve logging and update cache duration in tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ rand = "0.8"
 base64 = "0.22"
 chrono = "0.4"
 serde_json = "1.0"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
